--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "typescript-quickstart",
-  "version": "0.1.0",
-  "description": "a TypeScript quickstart",
+  "name": "coronavirus-api",
+  "version": "1.0.0",
+  "description": "an api that returns live statistics about the COVID-19",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "build-watch":"tsc --watch",
+    "build-watch": "tsc --watch",
     "lint": "eslint \"src/**\"",
     "test": "jest",
     "test-watch": "jest --watch",
     "test-coverage": "jest --coverage",
     "launch": "node -r dotenv/config ./dist/index.js",
-    "start":"nodemon ./dist/index.js"
+    "start": "nodemon ./dist/index.js"
   },
   "repository": "https://github.com/aredwood/typescript-quickstart.git",
   "author": "Alex Redwood <aredwood@users.noreply.github.com>",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@types/express": "^4.17.2",
-    "express": "^4.17.1"
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@types/cheerio": "^0.22.16",
+    "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
