--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
   "private": false,
   "dependencies": {
     "axios": "^0.19.2",
-    "cheerio": "^1.0.0-rc.3"
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "pino": "^5.17.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.25",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@types/cheerio": "^0.22.16",
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.25",
+    "@types/lodash": "^4.14.149",
+    "@types/pino": "^5.15.5",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
