deploy with postfixed branch name

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,3 +17,8 @@ steps:
     - name: 'gcr.io/cloud-builders/yarn'
       args: ['run','build']
       waitFor: ['packages']
+    
+    # send it 
+    - name: "ubuntu"
+      args: ["bash", "./deploy.sh", "$BRANCH_NAME"]
+      
