--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@types/hapi__joi": "^17.1.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
