--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@google-cloud/logging": "^7.3.0",
     "@hapi/joi": "^17.1.1",
     "@types/hapi__joi": "^17.1.0",
+    "@types/pino-http": "^5.0.1",
+    "@types/request-ip": "^0.0.35",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "pino": "^5.17.0"
+    "pino": "^5.17.0",
+    "pino-http": "^5.2.0",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.16",
