--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,20 +2,20 @@
 
 steps:
     # install packages
-    - name: 'gcr.io/cloud-builders/yarn'
+    - name: 'aredwood/env'
       id: "packages"
     
     # unit test
-    - name: 'gcr.io/cloud-builders/yarn'
-      args: ['run','test']
+    - name: 'aredwood/env'
+      args: ['yarn','run','test']
       waitFor: ["packages"]
     # lint
-    - name: 'gcr.io/cloud-builders/yarn'
-      args: ['run','lint']
+    - name: 'aredwood/env'
+      args: ['yarn','run','lint']
       waitFor: ['packages']
     # compile
-    - name: 'gcr.io/cloud-builders/yarn'
-      args: ['run','build']
+    - name: 'aredwood/env'
+      args: ['yarn','run','build']
       waitFor: ['packages']
     
     # send it 
